Documentation edits made through Mintlify web editor

--- a/app-builder/builder/components/cta.mdx
+++ b/app-builder/builder/components/cta.mdx
@@ -1,6 +1,6 @@
 ---
-title: 'CTA'
-description: 'Description of your new file.'
+title: "CTA"
+description: "Description of your new file."
 icon: "circle-user"
 ---
 
@@ -9,7 +9,7 @@ icon: "circle-user"
 **Tổng quan**
 
 - **Hiển thị tiêu đề:**
-  - Người dùng nhấn nút <Icon icon="toggle-large-on" color="#0a06e4" size={15} /> để chuyển đổi qua lại giữa 2 trạng thái có tiêu đề và không có tiêu đề, ngoài ra người dùng có thể nhập tiêu đề cho phần CTA. Ví dụ, nếu tiêu đề là "Nhận thông tin khuyến mãi từ chúng tôi" thì phần CTA sẽ như thế này
+  - Người dùng nhấn nút <Icon icon="toggle-large-on" color="#0a06e4" size={15} /> để chuyển đổi qua lại giữa 2 trạng thái có tiêu đề và không có tiêu đề, ngoài ra người dùng có thể nhập tiêu đề cho phần CTA. Ví dụ, nếu tiêu đề là "**Nhận thông tin khuyến mãi từ chúng tôi**" thì phần CTA sẽ như thế này
 
 <Frame caption="Tiêu đề CTA  ">
   <img
@@ -20,33 +20,105 @@ icon: "circle-user"
   />
 </Frame>
 
-- **Kích thước/ Màu sắc:**
-  - Người dùng có thể điều chỉnh kích thước và màu sắc cho tiêu đề của phần CTA tại ![][image174]
-
+- **Kích thước/Màu sắc:**
+  - Người dùng có thể điều chỉnh kích thước và màu sắc cho tiêu đề của phần CTA tại 
+<Frame caption>
+  <img
+    src=""
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
 - **Hiển thị nút quan tâm:**
   - Người dùng nhấn nút <Icon icon="toggle-large-on" color="#0a06e4" size={15} /> để chuyển đổi qua lại giữa 2 trạng thái có nút quan tâm OA và không có nút quan tâm OA
-
 - **Hiển thị nút tạo lối tắt:**
   - Người dùng nhấn nút <Icon icon="toggle-large-on" color="#0a06e4" size={15} /> để chuyển đổi qua lại giữa 2 trạng thái có nút tạo lối tắt và không có nút tạo lối tắt
-  - **Hiển thị nút liên hệ:**
-    Người dùng nhấn nút <Icon icon="toggle-large-on" color="#0a06e4" size={15} /> để chuyển đổi qua lại giữa 2 trạng thái có nút liên hệ và không có nút liên hệ
-
+  - **Hiển thị nút liên hệ:** Người dùng nhấn nút <Icon icon="toggle-large-on" color="#0a06e4" size={15} /> để chuyển đổi qua lại giữa 2 trạng thái có nút liên hệ và không có nút liên hệ
 - **Nền**
-  - Chọn màu nền cho phần CTA bằng cách nhấn ô vuông ![][image159] sau đó chọn màu
-  - Chuyển đổi qua lại giữa 2 trạng thái có màu nền và không có màu nền bằng cách nhấn nút <Icon icon="eye" color="#cfcfcf" size={15} />
-  - Xóa màu nền bằng cách nhấn nút <Icon icon="minus" color="#cfcfcf" size={15} />
+  - Chọn màu nền cho các thẻ bằng cách nhấn ô vuông sau đó chọn màu
 
+<Frame caption>
+  <img
+    src=""
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
+
+- Chuyển đổi qua lại giữa 2 trạng thái có màu nền và không có màu nền bằng cách nhấn nút <Icon icon="eye" color="#cfcfcf" size={15} />
+- Xóa màu nền bằng cách nhấn nút <Icon icon="minus" color="#cfcfcf" size={15} />
 - **Bo góc**
-  - Người dùng có thể nhập hoặc tăng/giảm chung độ bo góc của 4 góc của phần CTA tại ô nhập ![][image162] hoặc điềù chỉnh riêng lẻ độ bo góc của từng góc bằng cách nhấn nút ![][image163]
+  - Người dùng có thể nhập hoặc tăng/giảm chung độ bo góc của 4 góc của các thẻ tại ô nhập
+
+<Frame caption>
+  <img
+    src=""
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
+
+hoặc điềù chỉnh riêng lẻ độ bo góc của từng góc bằng cách nhấn nút
+
+<Frame caption>
+  <img
+    src=""
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
 
 - **Viền**
-  - Người dùng có thể nhập hoặc tăng/giảm chung độ lớn viền của phần CTA tại ô nhập ![][image164]
-  - Chọn màu cho viền bằng cách nhấn ô vuông ![][image165] sau đó chọn màu
-  - Chuyển đổi qua lại giữa 2 trạng thái có viền và không viền bằng cách nhấn nút <Icon icon="eye" color="#cfcfcf" size={15} />
-  - Xóa viền bằng cách nhấn nút <Icon icon="minus" color="#cfcfcf" size={15} />
+  - Người dùng có thể nhập hoặc tăng/giảm chung độ lớn viền của các thẻ tại ô nhập
 
+<Frame caption>
+  <img
+    src=""
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
+
+- Chọn màu cho viền bằng cách nhấn ô vuông sau đó chọn màu
+
+<Frame caption>
+  <img
+    src=""
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
+
+- Chuyển đổi qua lại giữa 2 trạng thái có viền và không viền bằng cách nhấn nút <Icon icon="eye" color="#cfcfcf" size={15} />
+- Xóa viền bằng cách nhấn nút <Icon icon="minus" color="#cfcfcf" size={15} />
 - **Đổ bóng**
-  - Người dùng có thể chọn độ lớn đổ bóng của phần CTA tại ô ![][image168]
-  - Chọn màu cho đổ bóng bằng cách nhấn ô vuông ![][image169] sau đó chọn màu
-    - Chuyển đổi qua lại giữa 2 trạng thái có đổ bóng và không đổ bóng bằng cách nhấn nút <Icon icon="eye" color="#cfcfcf" size={15} /> 
-  - Xóa đổ bóng bằng cách nhấn nút <Icon icon="minus" color="#cfcfcf" size={15} />
+  - Người dùng có thể chọn độ lớn đổ bóng của các thẻ tại ô
+
+<Frame caption>
+  <img
+    src=""
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
+
+- Chọn màu cho đổ bóng bằng cách nhấn ô vuông sau đó chọn màu
+
+<Frame caption>
+  <img
+    src=""
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
+
+- Chuyển đổi qua lại giữa 2 trạng thái có đổ bóng và không đổ bóng bằng cách nhấn nút <Icon icon="eye" color="#cfcfcf" size={15} />
+- Xóa đồ bóng bằng cách nhấn nút <Icon icon="minus" color="#cfcfcf" size={15} />
