--- a/app-builder/builder/components/flashsale.mdx
+++ b/app-builder/builder/components/flashsale.mdx
@@ -9,77 +9,108 @@ icon: "circle-user"
 **Dữ liệu**
 
 - **Thêm dữ liệu mới:**
-  - **Bước 1:** Người dùng nhấn vào nút "Thêm dữ liệu mới"
+<Steps>
 
-<Frame caption="Nút thêm dữ liệu mới  ">
-  <img
-    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image145_2567539437.png"
-    alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
-    title=""
-  />
-</Frame>
+  <Step title="Thêm dữ liệu mới cho FlashSale">
+    Người dùng nhấn vào nút **“Thêm dữ liệu mới”**.
 
-- **Bước 2:** Người dùng nhấn "**Tải ảnh lên hoặc chọn ảnh từ thư viện**" và nhập tiêu đề flashsale
+    <Frame caption="Nút thêm dữ liệu mới">
+      <img
+        src="https://aimini-upload.sgp1.digitaloceanspaces.com/image145_2567539437.png"
+        alt="Nút thêm dữ liệu mới cho FlashSale trong giao diện quản lý"
+        style={{ borderRadius:"0.5rem" }}
+        title="Nút thêm dữ liệu mới"
+      />
+    </Frame>
+  </Step>
 
-<Frame caption="Thêm dữ liệu ">
-  <img
-    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image155_f5334e8e57.png"
-    alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
-    title=""
-  />
-</Frame>
+  <Step title="Nhập thông tin FlashSale và chọn ảnh">
+    Người dùng nhấn **“Tải ảnh lên hoặc chọn ảnh từ thư viện”**, sau đó nhập **tiêu đề FlashSale**.
 
-- **Bước 3:** Người dùng nhấn "**Thêm dữ liệu**" để tiến hành thêm tiêu đề và hình ảnh cho flashsale hoặc nhấn "Hủy bỏ" để hủy quá trình thêm dữ liệu
+    <Frame caption="Thêm dữ liệu">
+      <img
+        src="https://aimini-upload.sgp1.digitaloceanspaces.com/image155_f5334e8e57.png"
+        alt="Giao diện thêm dữ liệu FlashSale và nhập tiêu đề"
+        style={{ borderRadius:"0.5rem" }}
+        title="Thêm dữ liệu FlashSale"
+      />
+    </Frame>
+  </Step>
+
+  <Step title="Hoàn tất hoặc hủy thao tác thêm dữ liệu">
+    Người dùng nhấn **“Thêm dữ liệu”** để tiến hành thêm tiêu đề và hình ảnh cho FlashSale, hoặc nhấn **“Hủy bỏ”** để hủy quá trình thêm dữ liệu.
+  </Step>
+
+</Steps>
+
 - **Chỉnh sửa:**
-  - **Bước 1:** Người dùng nhấn vào nút <Icon icon="pencil" color="#cfcfcf" size={15} /> để đến trang chỉnh sửa
+<Steps>
 
-<Frame caption="Nút chỉnh sửa">
-  <img
-    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image111_d570a45bee.png"
-    alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
-    title=""
-  />
-</Frame>
+  <Step title="Mở trang chỉnh sửa FlashSale">
+    Người dùng nhấn vào nút <Icon icon="pencil" color="#cfcfcf" size={15} /> để **đến trang chỉnh sửa chương trình FlashSale**.
 
-- **Bước 2:** Người dùng nhấn "**Tải ảnh lên hoặc chọn ảnh từ thư viện**” và nhập tiêu đề flashsale
+    <Frame caption="Nút chỉnh sửa">
+      <img
+        src="https://aimini-upload.sgp1.digitaloceanspaces.com/image111_d570a45bee.png"
+        alt="Nút chỉnh sửa FlashSale trong giao diện quản lý"
+        style={{ borderRadius:"0.5rem" }}
+        title="Nút chỉnh sửa FlashSale"
+      />
+    </Frame>
+  </Step>
 
-<Frame caption="Chỉnh sửa dữ liệu">
-  <img
-    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image178_35cf75f28c.png"
-    alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
-    title=""
-  />
-</Frame>
+  <Step title="Chỉnh sửa thông tin và hình ảnh FlashSale">
+    Người dùng nhấn **“Tải ảnh lên hoặc chọn ảnh từ thư viện”** và nhập **tiêu đề chương trình FlashSale**.
 
-- **Bước 3:** Người dùng nhấn "**Lưu chỉnh sửa**" để tiến hành chỉnh sửa sản phẩm flashsale hoặc nhấn "Hủy bỏ" để hủy quá trình chỉnh sửa dữ liệu
+    <Frame caption="Chỉnh sửa dữ liệu">
+      <img
+        src="https://aimini-upload.sgp1.digitaloceanspaces.com/image178_35cf75f28c.png"
+        alt="Giao diện chỉnh sửa thông tin và hình ảnh FlashSale"
+        style={{ borderRadius:"0.5rem" }}
+        title="Chỉnh sửa dữ liệu FlashSale"
+      />
+    </Frame>
+  </Step>
+
+  <Step title="Lưu hoặc hủy thao tác chỉnh sửa">
+    Người dùng nhấn **“Lưu chỉnh sửa”** để hoàn tất cập nhật thông tin FlashSale, hoặc nhấn **“Hủy bỏ”** để hủy quá trình chỉnh sửa dữ liệu.
+  </Step>
+
+</Steps>
+
 - **Xóa:**
-  - **Bước 1:** Người dùng nhấn vào nút <Icon icon="minus" color="#cfcfcf" size={15} /> để xóa dữ liệu
+<Steps>
 
-<Frame caption="Nút xóa dữ liệu">
-  <img
-    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image112_cd35ffc2fb.png"
-    alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
-    title=""
-  />
-</Frame>
+  <Step title="Xóa sản phẩm khỏi FlashSale">
+    Người dùng nhấn vào nút  
+    <Icon icon="minus" color="#cfcfcf" size={15} />  
+    để **xóa dữ liệu sản phẩm** khỏi chương trình FlashSale.
 
+    <Frame caption="Nút xóa dữ liệu">
+      <img
+        src="https://aimini-upload.sgp1.digitaloceanspaces.com/image112_cd35ffc2fb.png"
+        alt="Nút xóa sản phẩm khỏi chương trình FlashSale trong giao diện quản lý"
+        style={{ borderRadius:"0.5rem" }}
+        title="Nút xóa dữ liệu FlashSale"
+      />
+    </Frame>
+  </Step>
 
-    
-  - **Bước 2:** Tại hộp thông báo hiện lên, người dùng nhấn **Xóa ngay** để tiến hành xóa sản phẩm khỏi flashsale hoặc nhấn **Hủy** để hủy quá trình xóa dữ liệu
+  <Step title="Xác nhận thao tác xóa">
+    Khi hộp thông báo xuất hiện, người dùng nhấn **“Xóa ngay”** để **tiến hành xóa sản phẩm khỏi FlashSale**, hoặc nhấn **“Hủy”** để **dừng quá trình xóa dữ liệu**.
 
-<Frame caption="">
-  <img
-    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image104_1ba4757e62.png"
-    alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
-    title=""
-  />
-</Frame>
+    <Frame caption="Hộp xác nhận xóa dữ liệu">
+      <img
+        src="https://aimini-upload.sgp1.digitaloceanspaces.com/image104_1ba4757e62.png"
+        alt="Hộp xác nhận thao tác xóa sản phẩm khỏi FlashSale"
+        style={{ borderRadius:"0.5rem" }}
+        title="Xác nhận xóa dữ liệu FlashSale"
+      />
+    </Frame>
+  </Step>
+
+</Steps>
+
 
 
 
@@ -98,7 +129,15 @@ icon: "circle-user"
 </Frame>
 
   - **Kích thước/ Màu sắc:**
-    - Người dùng có thể điều chỉnh kích thước và màu sắc cho tiêu đề của phần sản phẩm tại ![][image153]
+    - Người dùng có thể điều chỉnh kích thước và màu sắc cho tiêu đề của phần sản phẩm tại
+<Frame caption>
+  <img
+    src=""
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
 - **Hiển thị phụ đề:**
   - Người dùng nhấn nút <Icon icon="toggle-large-on" color="#0a06e4" size={15} /> để chuyển đổi qua lại giữa 2 trạng thái có phụ đề và không có phụ đề, ngoài ra người dùng có thể nhập phụ đề cho phần sản phẩm. Ví dụ, nếu phụ đề là "Xem tất cả" thì phần sản phẩm sẽ như thế này
 
@@ -112,25 +151,125 @@ icon: "circle-user"
 </Frame>
 
   - **Kích thước /Màu sắc:**
-    - Người dùng có thể điều chỉnh kích thước và màu sắc cho tiêu đề của phần sản phẩm tại ![][image268]
+    - Người dùng có thể điều chỉnh kích thước và màu sắc cho tiêu đề của phần sản phẩm tại
+<Frame caption>
+  <img
+    src=""
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
 
 **Bộ đếm giờ**
 
 - **Hiển thị bộ đếm giờ:** Người dùng nhấn nút <Icon icon="toggle-large-on" color="#0a06e4" size={15} /> để chuyển đổi qua lại giữa 2 trạng thái có bộ đếm giờ và không có bộ đếm giờ.
-- **Nền:** Chọn màu nền cho bộ đếm giờ bằng cách nhấn ô vuông ![][image278] sau đó chọn màu
-- **Bo góc:** Người dùng có thể nhập hoặc tăng/giảm chung độ bo góc của 4 góc của bộ đếm giờ tại ô nhập ![][image281] hoặc điềù chỉnh riêng lẻ độ bo góc của từng góc bằng cách nhấn nút ![][image282]
-- **Viền:**
-  - Người dùng có thể nhập hoặc tăng/giảm chung độ lớn viền của bộ đếm giờ tại ô nhập ![][image283]
-  - Chọn màu cho viền bằng cách nhấn ô vuông ![][image284] sau đó chọn màu
-  - Chuyển đổi qua lại giữa 2 trạng thái có viền và không viền bằng cách nhấn nút <Icon icon="eye" color="#cfcfcf" size={15} />
-  - Xóa viền bằng cách nhấn nút <Icon icon="minus" color="#cfcfcf" size={15} />
-- **Đổ bóng:**
-  - Người dùng có thể chọn độ lớn đổ bóng của bộ đếm giờ tại ô ![][image335]
-  - Chọn màu cho đổ bóng bằng cách nhấn ô vuông ![][image288] sau đó chọn màu
-  - Chuyển đổi qua lại giữa 2 trạng thái có đổ bóng và không đổ bóng bằng cách nhấn nút <Icon icon="eye" color="#cfcfcf" size={15} />
-  - Xóa đổ bóng bằng cách nhấn nút <Icon icon="minus" color="#cfcfcf" size={15} />
-- **Kích thước/ Màu sắc (Thời gian):** Người dùng có thể điều chỉnh kích thước và màu sắc cho thời gian flashsale tại ![][image337]
-- **Kích thước/ Màu sắc (Ngày, giờ, phút, giây):** Người dùng có thể điều chỉnh kích thước và màu sắc cho ngày, giờ, phút, giây của flashsale tại ![][image337]
+- **Nền**
+  - Chọn màu nền cho các thẻ bằng cách nhấn ô vuông sau đó chọn màu
+
+<Frame caption>
+  <img
+    src=""
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
+
+- Chuyển đổi qua lại giữa 2 trạng thái có màu nền và không có màu nền bằng cách nhấn nút <Icon icon="eye" color="#cfcfcf" size={15} />
+- Xóa màu nền bằng cách nhấn nút <Icon icon="minus" color="#cfcfcf" size={15} />
+- **Bo góc**
+  - Người dùng có thể nhập hoặc tăng/giảm chung độ bo góc của 4 góc của các thẻ tại ô nhập
+
+<Frame caption>
+  <img
+    src=""
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
+
+hoặc điềù chỉnh riêng lẻ độ bo góc của từng góc bằng cách nhấn nút
+
+<Frame caption>
+  <img
+    src=""
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
+
+- **Viền**
+  - Người dùng có thể nhập hoặc tăng/giảm chung độ lớn viền của các thẻ tại ô nhập
+
+<Frame caption>
+  <img
+    src=""
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
+
+- Chọn màu cho viền bằng cách nhấn ô vuông sau đó chọn màu
+
+<Frame caption>
+  <img
+    src=""
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
+
+- Chuyển đổi qua lại giữa 2 trạng thái có viền và không viền bằng cách nhấn nút <Icon icon="eye" color="#cfcfcf" size={15} />
+- Xóa viền bằng cách nhấn nút <Icon icon="minus" color="#cfcfcf" size={15} />
+- **Đổ bóng**
+  - Người dùng có thể chọn độ lớn đổ bóng của các thẻ tại ô
+
+<Frame caption>
+  <img
+    src=""
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
+
+- Chọn màu cho đổ bóng bằng cách nhấn ô vuông sau đó chọn màu
+
+<Frame caption>
+  <img
+    src=""
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
+
+- Chuyển đổi qua lại giữa 2 trạng thái có đổ bóng và không đổ bóng bằng cách nhấn nút <Icon icon="eye" color="#cfcfcf" size={15} />
+- Xóa đồ bóng bằng cách nhấn nút <Icon icon="minus" color="#cfcfcf" size={15} />
+
+- **Kích thước/ Màu sắc (Thời gian):** Người dùng có thể điều chỉnh kích thước và màu sắc cho thời gian flashsale tại
+<Frame caption>
+  <img
+    src=""
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
+- **Kích thước/ Màu sắc (Ngày, giờ, phút, giây):** Người dùng có thể điều chỉnh kích thước và màu sắc cho ngày, giờ, phút, giây của flashsale tại 
+<Frame caption>
+  <img
+    src=""
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
 - **Hiển thị tiêu đề:** Người dùng nhấn nút <Icon icon="toggle-large-on" color="#0a06e4" size={15} /> để chuyển đổi qua lại giữa 2 trạng thái có tiêu đề và không có tiêu đề, ngoài ra người dùng có thể nhập tiêu đề cho flashsale. Ví dụ, nếu tiêu đề là "Ưu đãi chỉ còn" thì phần flashsale sẽ như thế này
 
 <Frame caption="Tiêu đề Flashsale">
@@ -143,76 +282,383 @@ icon: "circle-user"
 </Frame>
 
   - **Kích thước/ Màu sắc:**
-    - Người dùng có thể điều chỉnh kích thước và màu sắc cho tiêu đề của phần flashsale tại ![][image184]
-- **Link phụ đề khi nhấn:** Người dùng có thể chọn liên kết để khi click vào phụ đề, ứng dụng sẽ chuyển hướng đến liên kết đó tại ![][image339]
+    - Người dùng có thể điều chỉnh kích thước và màu sắc cho tiêu đề của phần flashsale tại 
+<Frame caption>
+  <img
+    src=""
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
+- **Link phụ đề khi nhấn:** Người dùng có thể chọn liên kết để khi click vào phụ đề, ứng dụng sẽ chuyển hướng đến liên kết đó tại 
+<Frame caption>
+  <img
+    src=""
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
 
 **Danh sách thẻ**
 
 - **Lề ngoài**
-  - Người dùng điều chỉnh chung khoảng cách giữa lề trên và dưới giữa danh sách sản phẩm với các phần tử khác của phần sản phẩm bằng nút ![][image270] tại phần **Lề ngoài**, ngoài ra người dùng có thể điều chỉnh riêng lề trên và lề dưới bằng cách nhấn vào nút ![][image271]
-  - Người dùng điều chỉnh khoảng cách giữa lề trái và phải giữa danh sách sản phẩm với các phần tử khác của phần sản phẩm bằng nút ![][image272] tại phần **Lề ngoài**, ngoài ra người dùng có thể điều chỉnh riêng lề trên và lề dưới bằng cách nhấn vào nút ![][image273]
+  - Người dùng điều chỉnh chung khoảng cách giữa lề trên và dưới giữa các thẻ với các thẻ khác bằng nút
+
+<Frame caption>
+  <img
+    src=""
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
+
+- Người dùng điều chỉnh khoảng cách giữa lề trái và phải giữa các thẻ với các thẻ khác bằng nút
+
+<Frame caption>
+  <img
+    src=""
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
+
+- Người dùng có thể điều chỉnh riêng lề trên và lề dưới bằng cách nhấn vào nút
+
+<Frame caption>
+  <img
+    src=""
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
+
 - **Lề trong**
-  - Người dùng điều chỉnh chung khoảng cách giữa lề trên và dưới giữa danh sách sản phẩm với các hình ảnh sản phầm bên trong bằng nút ![][image274] tại phần **Lề trong**, ngoài ra người dùng có thể điều chỉnh riêng lề trên và lề dưới bằng cách nhấn vào nút ![][image275]
-  - Người dùng điều chỉnh khoảng cách giữa lề trái và phải giữa danh sách sản phẩm với các hình ảnh sản phầm bên trong bằng nút ![][image276] tại phần **Lề trong**, ngoài ra người dùng có thể điều chỉnh riêng lề trên và lề dưới bằng cách nhấn vào nút ![][image277]
+  - Người dùng điều chỉnh chung khoảng cách giữa lề trên và dưới giữa lề các thẻ bằng nút
+
+<Frame caption>
+  <img
+    src=""
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
+
+- Người dùng điều chỉnh khoảng cách giữa lề trái và phải giữa lề các thẻ bằng nút
+
+<Frame caption>
+  <img
+    src=""
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
 - **Nền**
-  - Chọn màu nền cho phần danh sách sản phẩm bằng cách nhấn ô vuông ![][image278] sau đó chọn màu
-  - Chuyển đổi qua lại giữa 2 trạng thái có màu nền và không có màu nền bằng cách nhấn nút <Icon icon="eye" color="#cfcfcf" size={15} />
-  - Xóa màu nền bằng cách nhấn nút <Icon icon="minus" color="#cfcfcf" size={15} />
+  - Chọn màu nền cho các thẻ bằng cách nhấn ô vuông sau đó chọn màu
+
+<Frame caption>
+  <img
+    src=""
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
+
+- Chuyển đổi qua lại giữa 2 trạng thái có màu nền và không có màu nền bằng cách nhấn nút <Icon icon="eye" color="#cfcfcf" size={15} />
+- Xóa màu nền bằng cách nhấn nút <Icon icon="minus" color="#cfcfcf" size={15} />
 - **Bo góc**
-  - Người dùng có thể nhập hoặc tăng/giảm chung độ bo góc của 4 góc của phần danh sách sản phẩm tại ô nhập ![][image281] hoặc điềù chỉnh riêng lẻ độ bo góc của từng góc bằng cách nhấn nút ![][image282]
+  - Người dùng có thể nhập hoặc tăng/giảm chung độ bo góc của 4 góc của các thẻ tại ô nhập
+
+<Frame caption>
+  <img
+    src=""
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
+
+hoặc điềù chỉnh riêng lẻ độ bo góc của từng góc bằng cách nhấn nút
+
+<Frame caption>
+  <img
+    src=""
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
+
 - **Viền**
-  - Người dùng có thể nhập hoặc tăng/giảm chung độ lớn viền của phần danh sách sản phẩm tại ô nhập ![][image283]
-  - Chọn màu cho viền bằng cách nhấn ô vuông ![][image284] sau đó chọn màu
-  - Chuyển đổi qua lại giữa 2 trạng thái có viền và không viền bằng cách nhấn nút <Icon icon="eye" color="#cfcfcf" size={15} />
-  - Xóa viền bằng cách nhấn nút <Icon icon="minus" color="#cfcfcf" size={15} />
+  - Người dùng có thể nhập hoặc tăng/giảm chung độ lớn viền của các thẻ tại ô nhập
+
+<Frame caption>
+  <img
+    src=""
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
+
+- Chọn màu cho viền bằng cách nhấn ô vuông sau đó chọn màu
+
+<Frame caption>
+  <img
+    src=""
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
+
+- Chuyển đổi qua lại giữa 2 trạng thái có viền và không viền bằng cách nhấn nút <Icon icon="eye" color="#cfcfcf" size={15} />
+- Xóa viền bằng cách nhấn nút <Icon icon="minus" color="#cfcfcf" size={15} />
 - **Đổ bóng**
-  - Người dùng có thể chọn độ lớn đổ bóng của phần danh sách sản phẩm tại ô ![][image287]
-  - Chọn màu cho đổ bóng bằng cách nhấn ô vuông ![][image288] sau đó chọn màu
-  - Chuyển đổi qua lại giữa 2 trạng thái có đổ bóng và không đổ bóng bằng cách nhấn nút <Icon icon="eye" color="#cfcfcf" size={15} />
-  - Xóa đổ bóng bằng cách nhấn nút <Icon icon="minus" color="#cfcfcf" size={15} />
-- **Khoảng cách giữa phần tử** Người dùng có thể nhập hoặc tăng/giảm khoảng cách của phần danh sách sản phẩm tại ô nhập ![][image340]
+  - Người dùng có thể chọn độ lớn đổ bóng của các thẻ tại ô
+
+<Frame caption>
+  <img
+    src=""
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
+
+- Chọn màu cho đổ bóng bằng cách nhấn ô vuông sau đó chọn màu
+
+<Frame caption>
+  <img
+    src=""
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
+
+- Chuyển đổi qua lại giữa 2 trạng thái có đổ bóng và không đổ bóng bằng cách nhấn nút <Icon icon="eye" color="#cfcfcf" size={15} />
+- Xóa đồ bóng bằng cách nhấn nút <Icon icon="minus" color="#cfcfcf" size={15} />
+
+- **Khoảng cách giữa phần tử** Người dùng có thể nhập hoặc tăng/giảm khoảng cách của phần danh sách sản phẩm tại ô nhập
+<Frame caption>
+  <img
+    src=""
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
 
 **Thẻ sản phẩm**
 
 - **Lề ngoài**
-  - Người dùng điều chỉnh chung khoảng cách giữa lề trên và dưới giữa các thẻ sản phẩm với phần danh sách sản phẩm bằng nút ![][image128] tại phần **Lề ngoài**, ngoài ra người dùng có thể điều chỉnh riêng lề trên và lề dưới bằng cách nhấn vào nút ![][image129]
-  - Người dùng điều chỉnh khoảng cách giữa lề trái và phải giữa các thẻ sản phẩm với phần danh sách sản phẩm bằng nút ![][image130] tại phần **Lề ngoài**, ngoài ra người dùng có thể điều chỉnh riêng lề trên và lề dưới bằng cách nhấn vào nút ![][image131]
+  - Người dùng điều chỉnh chung khoảng cách giữa lề trên và dưới giữa các thẻ với các thẻ khác bằng nút
+
+<Frame caption>
+  <img
+    src=""
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
+
+- Người dùng điều chỉnh khoảng cách giữa lề trái và phải giữa các thẻ với các thẻ khác bằng nút
+
+<Frame caption>
+  <img
+    src=""
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
+
+- Người dùng có thể điều chỉnh riêng lề trên và lề dưới bằng cách nhấn vào nút
+
+<Frame caption>
+  <img
+    src=""
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
+
 - **Lề trong**
-  - Người dùng điều chỉnh chung khoảng cách giữa lề trên và dưới giữa các thẻ sản phẩm với các thành phần bên trong thẻ bằng nút ![][image132] tại phần **Lề trong**, ngoài ra người dùng có thể điều chỉnh riêng lề trên và lề dưới bằng cách nhấn vào nút ![][image133]
-  - Người dùng điều chỉnh khoảng cách giữa lề trái và phải giữa các thẻ sản phẩm với các thành phần bên trong thẻ bằng nút ![][image134] tại phần **Lề trong**, ngoài ra người dùng có thể điều chỉnh riêng lề trên và lề dưới bằng cách nhấn vào nút ![][image135]
-- **Kích thước** Người dùng có thể chọn hoặc tăng/giảm kích thước của các thẻ sản phẩm tại ![][image136]
+  - Người dùng điều chỉnh chung khoảng cách giữa lề trên và dưới giữa lề các thẻ bằng nút
 
-**Kiểu hình ảnh** Người dùng có thể chọn kiểu hình ảnh các thẻ sản phẩm tại ![][image107]
+<Frame caption>
+  <img
+    src=""
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
 
-**Nền**
+- Người dùng điều chỉnh khoảng cách giữa lề trái và phải giữa lề các thẻ bằng nút
 
-- Chọn màu nền cho thẻ sản phẩm bằng cách nhấn ô vuông ![][image137] sau đó chọn màu
-  - Chuyển đổi qua lại giữa 2 trạng thái có màu nền và không có màu nền bằng cách nhấn nút <Icon icon="eye" color="#cfcfcf" size={15} />
-  - Xóa màu nền bằng cách nhấn nút <Icon icon="minus" color="#cfcfcf" size={15} />
+<Frame caption>
+  <img
+    src=""
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
+- **Kích thước** Người dùng có thể chọn hoặc tăng/giảm kích thước của các thẻ sản phẩm tại 
+<Frame caption>
+  <img
+    src=""
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
+
+**Kiểu hình ảnh** Người dùng có thể chọn kiểu hình ảnh các thẻ sản phẩm tại 
+<Frame caption>
+  <img
+    src=""
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
+
+- **Nền**
+  - Chọn màu nền cho các thẻ bằng cách nhấn ô vuông sau đó chọn màu
+
+<Frame caption>
+  <img
+    src=""
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
+
+- Chuyển đổi qua lại giữa 2 trạng thái có màu nền và không có màu nền bằng cách nhấn nút <Icon icon="eye" color="#cfcfcf" size={15} />
+- Xóa màu nền bằng cách nhấn nút <Icon icon="minus" color="#cfcfcf" size={15} />
 - **Bo góc**
-  - Người dùng có thể nhập hoặc tăng/giảm chung độ bo góc của 4 góc của thẻ sản phẩm tại ô nhập ![][image140] hoặc điềù chỉnh riêng lẻ độ bo góc của từng góc bằng cách nhấn nút ![][image141]
+  - Người dùng có thể nhập hoặc tăng/giảm chung độ bo góc của 4 góc của các thẻ tại ô nhập
+
+<Frame caption>
+  <img
+    src=""
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
+
+hoặc điềù chỉnh riêng lẻ độ bo góc của từng góc bằng cách nhấn nút
+
+<Frame caption>
+  <img
+    src=""
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
+
 - **Viền**
-  - Người dùng có thể nhập hoặc tăng/giảm chung độ lớn viền của thẻ sản phẩm tại ô nhập ![][image142]
-  - Chọn màu cho viền bằng cách nhấn ô vuông ![][image143] sau đó chọn màu
-  - Chuyển đổi qua lại giữa 2 trạng thái có viền và không viền bằng cách nhấn nút <Icon icon="eye" color="#cfcfcf" size={15} />
-  - Xóa viền bằng cách nhấn nút <Icon icon="minus" color="#cfcfcf" size={15} />
+  - Người dùng có thể nhập hoặc tăng/giảm chung độ lớn viền của các thẻ tại ô nhập
+
+<Frame caption>
+  <img
+    src=""
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
+
+- Chọn màu cho viền bằng cách nhấn ô vuông sau đó chọn màu
+
+<Frame caption>
+  <img
+    src=""
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
+
+- Chuyển đổi qua lại giữa 2 trạng thái có viền và không viền bằng cách nhấn nút <Icon icon="eye" color="#cfcfcf" size={15} />
+- Xóa viền bằng cách nhấn nút <Icon icon="minus" color="#cfcfcf" size={15} />
 - **Đổ bóng**
-  - Người dùng có thể chọn độ lớn đổ bóng của thẻ sản phẩm tại ô ![][image146]
-  - Chọn màu cho đổ bóng bằng cách nhấn ô vuông ![][image147] sau đó chọn màu
-  - Chuyển đổi qua lại giữa 2 trạng thái có đổ bóng và không đổ bóng bằng cách nhấn nút <Icon icon="eye" color="#cfcfcf" size={15} />
-  - Xóa đổ bóng bằng cách nhấn nút <Icon icon="minus" color="#cfcfcf" size={15} />
+  - Người dùng có thể chọn độ lớn đổ bóng của các thẻ tại ô
+
+<Frame caption>
+  <img
+    src=""
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
+
+- Chọn màu cho đổ bóng bằng cách nhấn ô vuông sau đó chọn màu
+
+<Frame caption>
+  <img
+    src=""
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
+
+- Chuyển đổi qua lại giữa 2 trạng thái có đổ bóng và không đổ bóng bằng cách nhấn nút <Icon icon="eye" color="#cfcfcf" size={15} />
+- Xóa đồ bóng bằng cách nhấn nút <Icon icon="minus" color="#cfcfcf" size={15} />
+
 - **Hiển thị tên sản phẩm:**
   - Người dùng nhấn nút <Icon icon="toggle-large-on" color="#0a06e4" size={15} /> để chuyển đổi qua lại giữa 2 trạng thái có tên sản phẩm và không có tên sản phẩm
 - **Hiển thị danh mục:**
   - Người dùng nhấn nút <Icon icon="toggle-large-on" color="#0a06e4" size={15} /> để chuyển đổi qua lại giữa 2 trạng thái có danh mục và không có danh mục
 - **Hiển thị giá tiền:**
-  - Người dùng chọn không hiển thị giá, giá cơ bản, giá khuyến mãi hoặc tất cả tại ![][image110]
+  - Người dùng chọn không hiển thị giá, giá cơ bản, giá khuyến mãi hoặc tất cả tại 
+<Frame caption>
+  <img
+    src=""
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
 - **Hiển thị giá giảm:**
-  - Người dùng chọn hiển thị giá giảm theo phần trăm hay giá gốc ![][image111]
+  - Người dùng chọn hiển thị giá giảm theo phần trăm hay giá gốc 
+<Frame caption>
+  <img
+    src=""
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
 - **Sản phẩm Sale:**
   - Người dùng nhấn nút <Icon icon="toggle-large-on" color="#0a06e4" size={15} /> để chuyển đổi qua lại giữa 2 trạng thái có sản phẩm sale và không có sản phẩm sale
 - **Hiển thị nhãn:**
-  - Người dùng chọn không hiển thị nhãn ![][image113] hoặc chọn hiển thị nhãn flashsale, bán chạy, mới nhất.
+  - Người dùng chọn không hiển thị nhãn hoặc chọn hiển thị nhãn flashsale, bán chạy, mới nhất.
+<Frame caption>
+  <img
+    src=""
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
 - **Hiển thị yêu thích:**
   - Người dùng nhấn nút <Icon icon="toggle-large-on" color="#0a06e4" size={15} /> để chuyển đổi qua lại giữa 2 trạng thái có nút yêu thích và không có nút yêu thích
 - **Hiển thị đánh giá:**
@@ -224,6 +670,14 @@ icon: "circle-user"
 - **Hiển thị nút giỏ hàng:**
   - Người dùng nhấn nút <Icon icon="toggle-large-on" color="#0a06e4" size={15} /> để chuyển đổi qua lại giữa 2 trạng thái có nút thêm vào giỏ hàng và không có nút thêm vào giỏ hàng
 
-**Kiểu nút giỏ hàng:** Người dùng có thể chọn chuyển đổi hiển thị giỏ hàng giữa icon hoặc button ![][image118]
+**Kiểu nút giỏ hàng:** Người dùng có thể chọn chuyển đổi hiển thị giỏ hàng giữa icon hoặc button 
+<Frame caption>
+  <img
+    src=""
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
 
 ---
