--- a/app-builder/builder/components/news.mdx
+++ b/app-builder/builder/components/news.mdx
@@ -1,6 +1,6 @@
 ---
-title: 'News'
-description: 'Description of your new file.'
+title: "News"
+description: "Description of your new file."
 icon: "circle-user"
 ---
 
@@ -9,68 +9,90 @@ icon: "circle-user"
 **Dữ liệu**:
 
 - **Thêm dữ liệu mới:**
-  - **Bước 1**: Người dùng nhấn vào nút "Thêm dữ liệu mới"
 
-<Frame caption="Thêm dữ liệu mới  ">
-  <img
-    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image169_a8189018fa.png"
-    alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
-    title=""
-  />
-</Frame>
+<Steps>
+  <Step title="Thêm dữ liệu mới cho tin tức">
+    Người dùng nhấn vào nút **“Thêm dữ liệu mới”**.
 
-  - **Bước 2:** Người dùng nhập tiêu đề tin tức, nhấn "Tải ảnh lên hoặc chọn ảnh từ thư viện"
+    <Frame caption="Thêm dữ liệu mới">
+      <img
+        src="https://aimini-upload.sgp1.digitaloceanspaces.com/image169_a8189018fa.png"
+        alt="Nút thêm dữ liệu mới cho tin tức trong giao diện quản lý"
+        style={{ borderRadius:"0.5rem" }}
+        title="Nút thêm dữ liệu mới"
+      />
+    </Frame>
+  </Step>
+  <Step title="Nhập thông tin tin tức và chọn ảnh">
+    Người dùng nhập **tiêu đề tin tức**, sau đó nhấn **“Tải ảnh lên hoặc chọn ảnh từ thư viện”** để thêm hình minh họa cho tin tức.
 
-<Frame caption="Màn hình thêm dữ liệu  ">
-  <img
-    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image93_d0e1b33f58.png"
-    alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
-    title=""
-  />
-</Frame>
+    <Frame caption="Màn hình thêm dữ liệu">
+      <img
+        src="https://aimini-upload.sgp1.digitaloceanspaces.com/image93_d0e1b33f58.png"
+        alt="Giao diện thêm tin tức mới và chọn ảnh minh họa"
+        style={{ borderRadius:"0.5rem" }}
+        title="Màn hình thêm dữ liệu tin tức"
+      />
+    </Frame>
+  </Step>
+  <Step title="Hoàn tất hoặc hủy thao tác thêm tin tức">
+    Người dùng nhấn **“Thêm dữ liệu”** để tiến hành thêm tin tức mới, hoặc nhấn **“Hủy bỏ”** để hủy quá trình thêm dữ liệu.
+  </Step>
+</Steps>
 
-  - **Bước 3:** Người dùng nhấn "Thêm dữ liệu" để tiến hành thêm tin tức hoặc nhấn "Hủy bỏ" để hủy quá trình thêm dữ liệu
+- **Sửa dữ liệu**
 
-- **Sửa:**
-  - **Bước 1:** Người dùng nhấn vào nút <Icon icon="pencil" color="#cfcfcf" size={15} /> để đến trang chỉnh sửa
+<Steps>
+  <Step title="Mở trang chỉnh sửa tin tức">
+    Người dùng nhấn vào nút <Icon icon="pencil" color="#cfcfcf" size={15} /> để **đến trang chỉnh sửa tin tức**.
 
-<Frame caption="Nút chỉnh sửa ">
-  <img
-    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image65_3b249e0f79.png"
-    alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
-    title=""
-  />
-</Frame>
+    <Frame caption="Nút chỉnh sửa">
+      <img
+        src="https://aimini-upload.sgp1.digitaloceanspaces.com/image65_3b249e0f79.png"
+        alt="Nút chỉnh sửa tin tức trong giao diện quản lý"
+        style={{ borderRadius:"0.5rem" }}
+        title="Nút chỉnh sửa tin tức"
+      />
+    </Frame>
+  </Step>
+  <Step title="Chỉnh sửa nội dung và hình ảnh tin tức">
+    Người dùng sửa **tiêu đề tin tức**, sau đó nhấn **“Tải ảnh lên hoặc chọn ảnh từ thư viện”** để thay đổi hình minh họa cho tin.
 
-  - **Bước 2:** Người dùng sửa tiêu đề tin tức, nhấn "Tải ảnh lên và chọn ảnh từ thư viện"
-
-<Frame caption="Màn hình chỉnh sửa dữ liệu  ">
-  <img
-    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image195_d958fb2143.png"
-    alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
-    title=""
-  />
-</Frame>
-
-  - **Bước 3:** Người dùng nhấn "Lưu chỉnh sửa" để tiến hành chỉnh sửa tin tức hoặc nhấn "Hủy bỏ" để hủy quá trình chỉnh sửa dữ liệu
+    <Frame caption="Màn hình chỉnh sửa dữ liệu">
+      <img
+        src="https://aimini-upload.sgp1.digitaloceanspaces.com/image195_d958fb2143.png"
+        alt="Giao diện chỉnh sửa tin tức và thay đổi hình ảnh minh họa"
+        style={{ borderRadius:"0.5rem" }}
+        title="Màn hình chỉnh sửa tin tức"
+      />
+    </Frame>
+  </Step>
+  <Step title="Lưu hoặc hủy thao tác chỉnh sửa">
+    Người dùng nhấn **“Lưu chỉnh sửa”** để tiến hành cập nhật tin tức, hoặc nhấn **“Hủy bỏ”** để hủy quá trình chỉnh sửa dữ liệu.
+  </Step>
+</Steps>
 
 - **Xóa:**
-  - **Bước 1**: Người dùng nhấn vào nút <Icon icon="minus" color="#cfcfcf" size={15} /> để xóa dữ liệu
+<Steps>
 
-<Frame caption="Nút xóa dữ liệu   ">
-  <img
-    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image163_d9ff8be9bc.png"
-    alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
-    title=""
-  />
-</Frame>
+  <Step title="Xóa tin tức">
+    Người dùng nhấn vào nút <Icon icon="minus" color="#cfcfcf" size={15} /> để **xóa dữ liệu tin tức** khỏi danh sách.
 
-  - **Bước 2:** Tại hộp thông báo hiện lên, người dùng nhấn "Xóa ngay" để tiến hành xóa tin tức hoặc nhấn "Hủy" để hủy quá trình xóa dữ liệu
+    <Frame caption="Nút xóa dữ liệu">
+      <img
+        src="https://aimini-upload.sgp1.digitaloceanspaces.com/image163_d9ff8be9bc.png"
+        alt="Nút xóa tin tức trong giao diện quản lý"
+        style={{ borderRadius:"0.5rem" }}
+        title="Nút xóa dữ liệu tin tức"
+      />
+    </Frame>
+  </Step>
+
+  <Step title="Xác nhận xóa dữ liệu">
+    Khi hộp thông báo xuất hiện, người dùng nhấn **“Xóa ngay”** để **tiến hành xóa tin tức**, hoặc nhấn **“Hủy”** để **dừng quá trình xóa dữ liệu**.
+  </Step>
+
+</Steps>
 
 - **Tổng quan**
   - **Hiển thị tiêu đề:**
@@ -87,37 +109,281 @@ icon: "circle-user"
 
 - Tiêu đề phần tin tức
   - **Kích thước /Màu sắc:**
-    - Người dùng có thể điều chỉnh kích thước và màu sắc cho tiêu đề của phần tin tức tại ![][image292]
-
+    - Người dùng có thể điều chỉnh kích thước và màu sắc cho tiêu đề của phần tin tức tại 
+<Frame caption>
+  <img
+    src=""
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
 - **Thẻ tin tức**
   - **Lề ngoài**
-    - Người dùng điều chỉnh chung khoảng cách giữa lề trên và dưới giữa danh sách tin tức với các phần khác trong phần tin tức bằng nút ![][image293] tại phần **Lề ngoài**, ngoài ra người dùng có thể điều chỉnh riêng lề trên và lề dưới bằng cách nhấn vào nút ![][image294]
-    - Người dùng điều chỉnh khoảng cách giữa lề trái và phải giữa danh sách tin tức với các phần khác trong phần tin tức bằng nút ![][image295] tại phần **Lề ngoài**, ngoài ra người dùng có thể điều chỉnh riêng lề trên và lề dưới bằng cách nhấn vào nút ![][image296]
-  - **Lề trong**
-    - Người dùng điều chỉnh chung khoảng cách giữa lề trên và dưới giữa thẻ tin tức với các thành phần bên trong thẻ bằng nút ![][image297] tại phần **Lề trong**, ngoài ra người dùng có thể điều chỉnh riêng lề trên và lề dưới bằng cách nhấn vào nút ![][image298]
-    - Người dùng điều chỉnh khoảng cách giữa lề trái và phải giữa thẻ tin tức với các thành phần bên trong thẻ bằng nút ![][image299] tại phần **Lề trong**, ngoài ra người dùng có thể điều chỉnh riêng lề trên và lề dưới bằng cách nhấn vào nút ![][image300]
+    - Người dùng điều chỉnh chung khoảng cách giữa lề trên và dưới giữa các thẻ với các thẻ khác bằng nút
+
+<Frame caption>
+  <img
+    src=""
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
+
+- Người dùng điều chỉnh khoảng cách giữa lề trái và phải giữa các thẻ với các thẻ khác bằng nút
+
+<Frame caption>
+  <img
+    src=""
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
+
+- Người dùng có thể điều chỉnh riêng lề trên và lề dưới bằng cách nhấn vào nút
+
+<Frame caption>
+  <img
+    src=""
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
+
+- **Lề trong**
+  - Người dùng điều chỉnh chung khoảng cách giữa lề trên và dưới giữa lề các thẻ bằng nút
+
+<Frame caption>
+  <img
+    src=""
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
+
+- Người dùng điều chỉnh khoảng cách giữa lề trái và phải giữa lề các thẻ bằng nút
+
+<Frame caption>
+  <img
+    src=""
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
+
+- Người dùng có thể điều chỉnh riêng lề trên và lề dưới bằng cách nhấn vào nút
+
+<Frame caption>
+  <img
+    src=""
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
   - **Chiều cao:**
-    - Người dùng có thể nhập hoặc tăng/giảm chiều cao của thẻ tin tức tại ![][image301]
-  - **Nền**
-    - Chọn màu nền cho thẻ tin tức bằng cách nhấn ô vuông ![][image302] sau đó chọn màu
-    - Chuyển đổi qua lại giữa 2 trạng thái có màu nền và không có màu nền bằng cách nhấn nút <Icon icon="eye" color="#cfcfcf" size={15} />
-    - Xóa màu nền bằng cách nhấn nút <Icon icon="minus" color="#cfcfcf" size={15} />
-  - **Bo góc**
-    - Người dùng có thể nhập hoặc tăng/giảm chung độ bo góc của 4 góc của thẻ tin tức tại ô nhập ![][image305] hoặc điềù chỉnh riêng lẻ độ bo góc của từng góc bằng cách nhấn nút ![][image306]
-  - **Viền**
-    - Người dùng có thể nhập hoặc tăng/giảm chung độ lớn viền của thẻ tin tức tại ô nhập ![][image307]
-    - Chọn màu cho viền bằng cách nhấn ô vuông ![][image308] sau đó chọn màu
-    - Chuyển đổi qua lại giữa 2 trạng thái có viền và không viền bằng cách nhấn nút <Icon icon="eye" color="#cfcfcf" size={15} />
-    - Xóa viền bằng cách nhấn nút <Icon icon="minus" color="#cfcfcf" size={15} />
-  - **Đổ bóng**
-    - Người dùng có thể chọn độ lớn đổ bóng của thẻ tin tức tại ô ![][image311]
-    - Chọn màu cho đổ bóng bằng cách nhấn ô vuông ![][image312] sau đó chọn màu
-    - Chuyển đổi qua lại giữa 2 trạng thái có đổ bóng và không đổ bóng bằng cách nhấn nút <Icon icon="eye" color="#cfcfcf" size={15} />
-    - Xóa đổ bóng bằng cách nhấn nút <Icon icon="minus" color="#cfcfcf" size={15} />
+    - Người dùng có thể nhập hoặc tăng/giảm chiều cao của thẻ tin tức tại 
+<Frame caption>
+  <img
+    src=""
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
+- **Nền**
+  - Chọn màu nền cho các thẻ bằng cách nhấn ô vuông sau đó chọn màu
+
+<Frame caption>
+  <img
+    src=""
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
+
+- Chuyển đổi qua lại giữa 2 trạng thái có màu nền và không có màu nền bằng cách nhấn nút <Icon icon="eye" color="#cfcfcf" size={15} />
+- Xóa màu nền bằng cách nhấn nút <Icon icon="minus" color="#cfcfcf" size={15} />
+- **Bo góc**
+  - Người dùng có thể nhập hoặc tăng/giảm chung độ bo góc của 4 góc của các thẻ tại ô nhập
+
+<Frame caption>
+  <img
+    src=""
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
+
+hoặc điềù chỉnh riêng lẻ độ bo góc của từng góc bằng cách nhấn nút
+
+<Frame caption>
+  <img
+    src=""
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
+
+- **Viền**
+  - Người dùng có thể nhập hoặc tăng/giảm chung độ lớn viền của các thẻ tại ô nhập
+
+<Frame caption>
+  <img
+    src=""
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
+
+- Chọn màu cho viền bằng cách nhấn ô vuông sau đó chọn màu
+
+<Frame caption>
+  <img
+    src=""
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
+
+- Chuyển đổi qua lại giữa 2 trạng thái có viền và không viền bằng cách nhấn nút <Icon icon="eye" color="#cfcfcf" size={15} />
+- Xóa viền bằng cách nhấn nút <Icon icon="minus" color="#cfcfcf" size={15} />
+- **Đổ bóng**
+  - Người dùng có thể chọn độ lớn đổ bóng của các thẻ tại ô
+
+<Frame caption>
+  <img
+    src=""
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
+
+- Chọn màu cho đổ bóng bằng cách nhấn ô vuông sau đó chọn màu
+
+<Frame caption>
+  <img
+    src=""
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
+
+- Chuyển đổi qua lại giữa 2 trạng thái có đổ bóng và không đổ bóng bằng cách nhấn nút <Icon icon="eye" color="#cfcfcf" size={15} />
+- Xóa đồ bóng bằng cách nhấn nút <Icon icon="minus" color="#cfcfcf" size={15} />
+- **Hiển thị tên danh mục**
+  - Người dùng nhấn nút <Icon icon="toggle-large-on" color="#0a06e4" size={15} /> để chuyển đổi qua lại giữa 2 trạng thái có tên của các thẻ trong danh mục và không có tên của các thẻ trong danh mục. Nếu bật, người dùng sẽ nhập kích thước tên, màu của tên. Ví dụ, nếu chọn kích thước là 12 và màu đen thì danh mục sẽ như thế này:
+
+<Frame caption="Danh mục  ">
+  <img
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image72_ad00d88a1b.png"
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
+
+- **Hình ảnh danh mục**
+  - **Kích thước:**
+    - Người dùng có thể nhập hoặc tăng/giảm chung kích thước của các hình ảnh trong từng thẻ tại
+
+<Frame caption>
+  <img
+    src=""
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
+
+- **Bo góc**
+  - Người dùng có thể nhập hoặc tăng/giảm chung độ bo góc của 4 góc của các ảnh tại ô nhập
+
+<Frame caption>
+  <img
+    src=""
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
+
+hoặc điều chỉnh riêng lẻ độ bo góc của từng góc bằng cách nhấn nút
+
+<Frame caption>
+  <img
+    src=""
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
+
+- **Viền**
+  - Người dùng có thể nhập hoặc tăng/giảm chung độ lớn viền của các ảnh tại ô nhập
+
+<Frame caption>
+  <img
+    src=""
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
+
+- Chọn màu cho viền bằng cách nhấn ô vuông sau đó chọn màu
+
+<Frame caption>
+  <img
+    src=""
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
+
+- Chuyển đổi qua lại giữa 2 trạng thái có viền và không viền bằng cách nhấn nút <Icon icon="eye" color="#cfcfcf" size={15} />
+- Xóa viền bằng cách nhấn nút <Icon icon="minus" color="#cfcfcf" size={15} />
+- **Đổ bóng**
+  - Người dùng có thể chọn độ lớn đổ bóng của các ảnh tại ô
+
+<Frame caption>
+  <img
+    src=""
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
+
+- Chọn màu cho đổ bóng bằng cách nhấn ô vuông sau đó chọn màu
+
+<Frame caption>
+  <img
+    src=""
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
+
+- Chuyển đổi qua lại giữa 2 trạng thái có đổ bóng và không đổ bóng bằng cách nhấn nút <Icon icon="eye" color="#cfcfcf" size={15} />
+- Xóa đồ bóng bằng cách nhấn nút <Icon icon="minus" color="#cfcfcf" size={15} />
   - **Hiển thị tên tin tức**:
     - Người dùng nhấn nút <Icon icon="toggle-large-on" color="#0a06e4" size={15} /> để chuyển đổi qua lại giữa 2 trạng thái có tên tin tức và không có tên tin tức
   - **Hiển thị thời gian:**
     - Người dùng nhấn nút <Icon icon="toggle-large-on" color="#0a06e4" size={15} /> để chuyển đổi qua lại giữa 2 trạng thái có thời gian đăng tin tức và không có thời gian đăng tin tức
-
 - **Hiển thị lượt xem:**
   - Người dùng nhấn nút <Icon icon="toggle-large-on" color="#0a06e4" size={15} /> để chuyển đổi qua lại giữa 2 trạng thái có lượt xem tin tức và không có lượt xem tin tức
