--- a/app-builder/builder/components/products.mdx
+++ b/app-builder/builder/components/products.mdx
@@ -9,68 +9,103 @@ icon: "circle-user"
 **Dữ liệu**
 
 - **Thêm dữ liệu mới:**
-  - **Bước 1:** Người dùng nhấn vào nút "Thêm dữ liệu mới"
+<Steps>
 
-<Frame caption="Thêm dữ liệu mới ">
-  <img
-    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image222_69e6988ee2.png"
-    alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
-    title=""
-  />
-</Frame>
+  <Step title="Thêm dữ liệu mới cho sản phẩm">
+    Người dùng nhấn vào nút **“Thêm dữ liệu mới”**.
 
-  - **Bước 2**: Người dùng nhập tiêu đề sản phẩm, nhấn "Tải ảnh lên hoặc chọn ảnh từ thư viện"
+    <Frame caption="Thêm dữ liệu mới">
+      <img
+        src="https://aimini-upload.sgp1.digitaloceanspaces.com/image222_69e6988ee2.png"
+        alt="Nút thêm dữ liệu mới cho sản phẩm trong giao diện quản lý"
+        style={{ borderRadius:"0.5rem" }}
+        title="Nút thêm dữ liệu mới"
+      />
+    </Frame>
+  </Step>
 
-<Frame caption="Màn hình thêm dữ liệu ">
-  <img
-    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image97_446d31dbb8.png"
-    alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
-    title=""
-  />
-</Frame>
+  <Step title="Nhập thông tin sản phẩm và chọn ảnh">
+    Người dùng nhập **tiêu đề sản phẩm**,  
+    sau đó nhấn **“Tải ảnh lên hoặc chọn ảnh từ thư viện”** để thêm hình ảnh minh họa cho sản phẩm.
 
-  - **Bước 3:** Người dùng nhấn "Thêm dữ liệu" để tiến hành thêm sản phẩm hoặc nhấn "Hủy bỏ" để hủy quá trình thêm dữ liệu
+    <Frame caption="Màn hình thêm dữ liệu">
+      <img
+        src="https://aimini-upload.sgp1.digitaloceanspaces.com/image97_446d31dbb8.png"
+        alt="Giao diện thêm thông tin và chọn ảnh sản phẩm"
+        style={{ borderRadius:"0.5rem" }}
+        title="Màn hình thêm dữ liệu sản phẩm"
+      />
+    </Frame>
+  </Step>
+
+  <Step title="Hoàn tất hoặc hủy thao tác thêm sản phẩm">
+    Người dùng nhấn **“Thêm dữ liệu”** để hoàn tất việc thêm sản phẩm mới,  
+    hoặc nhấn **“Hủy bỏ”** để hủy quá trình thêm dữ liệu.
+  </Step>
+
+</Steps>
+
 
 - **Sửa:**
-  - **Bước 1:** Người dùng nhấn vào nút <Icon icon="pencil" color="#cfcfcf" size={15} /> để đến trang chỉnh sửa
+<Steps>
 
-<Frame caption="Nút chỉnh sửa ">
-  <img
-    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image39_16123be01c.png"
-    alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
-    title=""
-  />
-</Frame>
+  <Step title="Mở trang chỉnh sửa sản phẩm">
+    Người dùng nhấn vào nút <Icon icon="pencil" color="#cfcfcf" size={15} /> để **đến trang chỉnh sửa sản phẩm**.
 
-  - **Bước 2:** Người dùng sửa tiêu đề sản phẩm, nhấn "Tải ảnh lên hoặc chọn ảnh từ thư viện"
+    <Frame caption="Nút chỉnh sửa">
+      <img
+        src="https://aimini-upload.sgp1.digitaloceanspaces.com/image39_16123be01c.png"
+        alt="Nút chỉnh sửa sản phẩm trong giao diện quản lý"
+        style={{ borderRadius:"0.5rem" }}
+        title="Nút chỉnh sửa sản phẩm"
+      />
+    </Frame>
+  </Step>
 
-<Frame caption="Màn hình chỉnh sửa dữ liệu  ">
-  <img
-    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image162_46e715931d.png"
-    alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
-    title=""
-  />
-</Frame>
+  <Step title="Chỉnh sửa thông tin sản phẩm">
+    Người dùng sửa **tiêu đề sản phẩm**, sau đó nhấn **“Tải ảnh lên hoặc chọn ảnh từ thư viện”** để thay đổi hình ảnh minh họa cho sản phẩm.
 
-  - **Bước 3**: Người dùng nhấn "Lưu chỉnh sửa" để tiến hành chỉnh sửa ảnh cho sản phẩm hoặc nhấn "Hủy bỏ" để hủy quá trình chỉnh sửa dữ liệu
+    <Frame caption="Màn hình chỉnh sửa dữ liệu">
+      <img
+        src="https://aimini-upload.sgp1.digitaloceanspaces.com/image162_46e715931d.png"
+        alt="Giao diện chỉnh sửa thông tin và hình ảnh sản phẩm"
+        style={{ borderRadius:"0.5rem" }}
+        title="Màn hình chỉnh sửa dữ liệu sản phẩm"
+      />
+    </Frame>
+  </Step>
+
+  <Step title="Lưu hoặc hủy chỉnh sửa">
+    Người dùng nhấn **“Lưu chỉnh sửa”** để tiến hành cập nhật thông tin hoặc hình ảnh sản phẩm,  
+    hoặc nhấn **“Hủy bỏ”** để hủy quá trình chỉnh sửa dữ liệu.
+  </Step>
+
+</Steps>
+
 
 - **Xóa:**
-  - **Bước 1:** Người dùng nhấn vào nút <Icon icon="minus" color="#cfcfcf" size={15} /> để xóa dữ liệu
+<Steps>
 
-<Frame caption="Nút xóa   ">
-  <img
-    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image180_d0f90fa0d3.png"
-    alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
-    title=""
-  />
-</Frame>
+  <Step title="Xóa sản phẩm">
+    Người dùng nhấn vào nút <Icon icon="minus" color="#cfcfcf" size={15} /> để **xóa dữ liệu sản phẩm** khỏi danh sách.
 
-  - **Bước 2:** Tại hộp thông báo hiện lên, người dùng nhấn "Xóa ngay" để tiến hành xóa sản phẩm hoặc nhấn "Hủy" để hủy quá trình xóa dữ liệu
+    <Frame caption="Nút xóa">
+      <img
+        src="https://aimini-upload.sgp1.digitaloceanspaces.com/image180_d0f90fa0d3.png"
+        alt="Nút xóa sản phẩm trong giao diện quản lý"
+        style={{ borderRadius:"0.5rem" }}
+        title="Nút xóa sản phẩm"
+      />
+    </Frame>
+  </Step>
+
+  <Step title="Xác nhận xóa dữ liệu">
+    Khi hộp thông báo xuất hiện, người dùng nhấn **“Xóa ngay”** để **tiến hành xóa sản phẩm**,  
+    hoặc nhấn **“Hủy”** để **dừng quá trình xóa dữ liệu**.
+  </Step>
+
+</Steps>
+
 
 - **Tổng quan**
   - **Hiển thị tiêu đề:**
@@ -86,7 +121,15 @@ icon: "circle-user"
 </Frame>
 
   - **Kích thước/ Màu sắc**:
-    - Người dùng có thể điều chỉnh kích thước và màu sắc cho tiêu đề của phần sản phẩm tại ![][image125]
+    - Người dùng có thể điều chỉnh kích thước và màu sắc cho tiêu đề của phần sản phẩm tại 
+<Frame caption="">
+  <img
+    src=""
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
 
   - **Hiển thị phụ đề:**
     - Người dùng nhấn nút <Icon icon="toggle-large-on" color="#0a06e4" size={15} /> để chuyển đổi qua lại giữa 2 trạng thái có phụ đề và không có phụ đề, ngoài ra người dùng có thể nhập phụ đề cho phần sản phẩm. Ví dụ, nếu phụ đề là "Xem thêm" thì phần sản phẩm sẽ như thế này
@@ -101,71 +144,362 @@ icon: "circle-user"
 </Frame>
 
   - **Kích thường/ Màu sắc:**
-    - Người dùng có thể điều chỉnh kích thước và màu sắc cho tiêu đề của phần sản phẩm tại ![][image258]
+    - Người dùng có thể điều chỉnh kích thước và màu sắc cho tiêu đề của phần sản phẩm tại 
+<Frame caption="">
+  <img
+    src=""
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
   - **Link phụ đề khi nhấn:**
-    - Người dùng có thể chọn liên kết để khi click vào phụ đề, ứng dụng sẽ chuyển hướng đến liên kết đó tại ![][image259]
+    - Người dùng có thể chọn liên kết để khi click vào phụ đề, ứng dụng sẽ chuyển hướng đến liên kết đó tại 
+<Frame caption>
+  <img
+    src=""
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
 
 - **Danh sách thẻ**
   - **Lề ngoài**
-    - Người dùng điều chỉnh chung khoảng cách giữa lề trên và dưới giữa danh sách sản phẩm với các phần tử khác của phần sản phẩm bằng nút ![][image260] tại phần **Lề ngoài**, ngoài ra người dùng có thể điều chỉnh riêng lề trên và lề dưới bằng cách nhấn vào nút ![][image261]
-    - Người dùng điều chỉnh khoảng cách giữa lề trái và phải giữa danh sách sản phẩm với các phần tử khác của phần sản phẩm bằng nút ![][image262] tại phần **Lề ngoài**, ngoài ra người dùng có thể điều chỉnh riêng lề trên và lề dưới bằng cách nhấn vào nút ![][image263]
-  - **Lề trong**
-    - Người dùng điều chỉnh chung khoảng cách giữa lề trên và dưới giữa danh sách sản phẩm với các hình ảnh sản phầm bên trong bằng nút ![][image264] tại phần **Lề trong**, ngoài ra người dùng có thể điều chỉnh riêng lề trên và lề dưới bằng cách nhấn vào nút ![][image265]
-    - Người dùng điều chỉnh khoảng cách giữa lề trái và phải giữa danh sách sản phẩm với các hình ảnh sản phầm bên trong bằng nút ![][image266] tại phần **Lề trong**, ngoài ra người dùng có thể điều chỉnh riêng lề trên và lề dưới bằng cách nhấn vào nút ![][image267]
-  - **Nền**
-    - Chọn màu nền cho phần danh sách sản phẩm bằng cách nhấn ô vuông ![][image268] sau đó chọn màu
-    - Chuyển đổi qua lại giữa 2 trạng thái có màu nền và không có màu nền bằng cách nhấn nút <Icon icon="eye" color="#cfcfcf" size={15} />
-    - Xóa màu nền bằng cách nhấn nút <Icon icon="minus" color="#cfcfcf" size={15} />
-  - **Bo góc**
-    - Người dùng có thể nhập hoặc tăng/giảm chung độ bo góc của 4 góc của phần danh sách sản phẩm tại ô nhập ![][image271] hoặc điềù chỉnh riêng lẻ độ bo góc của từng góc bằng cách nhấn nút ![][image272]
-  - **Viền**
-    - Người dùng có thể nhập hoặc tăng/giảm chung độ lớn viền của phần danh sách sản phẩm tại ô nhập ![][image273]
-    - Chọn màu cho viền bằng cách nhấn ô vuông ![][image274] sau đó chọn màu
-    - Chuyển đổi qua lại giữa 2 trạng thái có viền và không viền bằng cách nhấn nút <Icon icon="eye" color="#cfcfcf" size={15} />
-    - Xóa viền bằng cách nhấn nút <Icon icon="minus" color="#cfcfcf" size={15} />
-  - **Đổ bóng**
-    - Người dùng có thể chọn độ lớn đổ bóng của phần danh sách sản phẩm tại ô ![][image277]
-    - Chọn màu cho đổ bóng bằng cách nhấn ô vuông ![][image278] sau đó chọn màu
-    - Chuyển đổi qua lại giữa 2 trạng thái có đổ bóng và không đổ bóng bằng cách nhấn nút <Icon icon="eye" color="#cfcfcf" size={15} />
-    - Xóa đổ bóng bằng cách nhấn nút <Icon icon="minus" color="#cfcfcf" size={15} />
+    - Người dùng điều chỉnh chung khoảng cách giữa lề trên và dưới giữa các thẻ với các thẻ khác bằng nút
+
+<Frame caption>
+  <img
+    src=""
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
+
+- Người dùng điều chỉnh khoảng cách giữa lề trái và phải giữa các thẻ với các thẻ khác bằng nút
+
+<Frame caption>
+  <img
+    src=""
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
+
+- Người dùng có thể điều chỉnh riêng lề trên và lề dưới bằng cách nhấn vào nút
+
+<Frame caption>
+  <img
+    src=""
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
+
+- **Lề trong**
+  - Người dùng điều chỉnh chung khoảng cách giữa lề trên và dưới giữa lề các thẻ bằng nút
+
+<Frame caption>
+  <img
+    src=""
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
+
+- Người dùng điều chỉnh khoảng cách giữa lề trái và phải giữa lề các thẻ bằng nút
+
+<Frame caption>
+  <img
+    src=""
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
+- **Nền**
+  - Chọn màu nền cho các thẻ bằng cách nhấn ô vuông sau đó chọn màu
+
+<Frame caption>
+  <img
+    src=""
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
+
+- Chuyển đổi qua lại giữa 2 trạng thái có màu nền và không có màu nền bằng cách nhấn nút <Icon icon="eye" color="#cfcfcf" size={15} />
+- Xóa màu nền bằng cách nhấn nút <Icon icon="minus" color="#cfcfcf" size={15} />
+- **Bo góc**
+  - Người dùng có thể nhập hoặc tăng/giảm chung độ bo góc của 4 góc của các thẻ tại ô nhập
+
+<Frame caption>
+  <img
+    src=""
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
+
+hoặc điềù chỉnh riêng lẻ độ bo góc của từng góc bằng cách nhấn nút
+
+<Frame caption>
+  <img
+    src=""
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
+
+- **Viền**
+  - Người dùng có thể nhập hoặc tăng/giảm chung độ lớn viền của các thẻ tại ô nhập
+
+<Frame caption>
+  <img
+    src=""
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
+
+- Chọn màu cho viền bằng cách nhấn ô vuông sau đó chọn màu
+
+<Frame caption>
+  <img
+    src=""
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
+
+- Chuyển đổi qua lại giữa 2 trạng thái có viền và không viền bằng cách nhấn nút <Icon icon="eye" color="#cfcfcf" size={15} />
+- Xóa viền bằng cách nhấn nút <Icon icon="minus" color="#cfcfcf" size={15} />
+- **Đổ bóng**
+  - Người dùng có thể chọn độ lớn đổ bóng của các thẻ tại ô
+
+<Frame caption>
+  <img
+    src=""
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
+
+- Chọn màu cho đổ bóng bằng cách nhấn ô vuông sau đó chọn màu
+
+<Frame caption>
+  <img
+    src=""
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
+
+- Chuyển đổi qua lại giữa 2 trạng thái có đổ bóng và không đổ bóng bằng cách nhấn nút <Icon icon="eye" color="#cfcfcf" size={15} />
+- Xóa đồ bóng bằng cách nhấn nút <Icon icon="minus" color="#cfcfcf" size={15} />
 
 - **Chi tiết thẻ**
   - **Lề ngoài**
-    - Người dùng điều chỉnh chung khoảng cách giữa lề trên và dưới giữa các thẻ sản phẩm với phần danh sách sản phẩm bằng nút ![][image133] tại phần **Lề ngoài**, ngoài ra người dùng có thể điều chỉnh riêng lề trên và lề dưới bằng cách nhấn vào nút ![][image134]
-    - Người dùng điều chỉnh khoảng cách giữa lề trái và phải giữa các thẻ sản phẩm với phần danh sách sản phẩm bằng nút ![][image135] tại phần **Lề ngoài**, ngoài ra người dùng có thể điều chỉnh riêng lề trên và lề dưới bằng cách nhấn vào nút ![][image136]
-  - **Lề trong**
-    - Người dùng điều chỉnh chung khoảng cách giữa lề trên và dưới giữa các thẻ sản phẩm với các thành phần bên trong thẻ bằng nút ![][image137] tại phần **Lề trong**, ngoài ra người dùng có thể điều chỉnh riêng lề trên và lề dưới bằng cách nhấn vào nút ![][image138]
-    - Người dùng điều chỉnh khoảng cách giữa lề trái và phải giữa các thẻ sản phẩm với các thành phần bên trong thẻ bằng nút ![][image139] tại phần **Lề trong**, ngoài ra người dùng có thể điều chỉnh riêng lề trên và lề dưới bằng cách nhấn vào nút ![][image140]
+    - Người dùng điều chỉnh chung khoảng cách giữa lề trên và dưới giữa các thẻ với các thẻ khác bằng nút
+
+<Frame caption>
+  <img
+    src=""
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
+
+- Người dùng điều chỉnh khoảng cách giữa lề trái và phải giữa các thẻ với các thẻ khác bằng nút
+
+<Frame caption>
+  <img
+    src=""
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
+
+- Người dùng có thể điều chỉnh riêng lề trên và lề dưới bằng cách nhấn vào nút
+
+<Frame caption>
+  <img
+    src=""
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
+
+- **Lề trong**
+  - Người dùng điều chỉnh chung khoảng cách giữa lề trên và dưới giữa lề các thẻ bằng nút
+
+<Frame caption>
+  <img
+    src=""
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
+
+- Người dùng điều chỉnh khoảng cách giữa lề trái và phải giữa lề các thẻ bằng nút
+
+<Frame caption>
+  <img
+    src=""
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
   - **Chiều cao**
-    - Người dùng có thể chọn hoặc tăng/giảm chiều cao của các thẻ sản phẩm tại ![][image281]
-  - **Nền**
-    - Chọn màu nền cho thẻ sản phẩm bằng cách nhấn ô vuông ![][image120] sau đó chọn màu
-    - Chuyển đổi qua lại giữa 2 trạng thái có màu nền và không có màu nền bằng cách nhấn nút <Icon icon="eye" color="#cfcfcf" size={15} />
-    - Xóa màu nền bằng cách nhấn nút <Icon icon="minus" color="#cfcfcf" size={15} />
-  - **Bo góc**
-    - Người dùng có thể nhập hoặc tăng/giảm chung độ bo góc của 4 góc của thẻ sản phẩm tại ô nhập ![][image141] hoặc điềù chỉnh riêng lẻ độ bo góc của từng góc bằng cách nhấn nút ![][image142]
-  - **Viền**
-    - Người dùng có thể nhập hoặc tăng/giảm chung độ lớn viền của thẻ sản phẩm tại ô nhập ![][image143]
-    - Chọn màu cho viền bằng cách nhấn ô vuông ![][image144] sau đó chọn màu
-    - Chuyển đổi qua lại giữa 2 trạng thái có viền và không viền bằng cách nhấn nút <Icon icon="eye" color="#cfcfcf" size={15} />
-    - Xóa viền bằng cách nhấn nút <Icon icon="minus" color="#cfcfcf" size={15} />
-  - **Đổ bóng**
-    - Người dùng có thể chọn độ lớn đổ bóng của thẻ sản phẩm tại ô ![][image147]
-    - Chọn màu cho đổ bóng bằng cách nhấn ô vuông ![][image148] sau đó chọn màu
-    - Chuyển đổi qua lại giữa 2 trạng thái có đổ bóng và không đổ bóng bằng cách nhấn nút <Icon icon="eye" color="#cfcfcf" size={15} />
-    - Xóa đổ bóng bằng cách nhấn nút <Icon icon="minus" color="#cfcfcf" size={15} />
+    - Người dùng có thể chọn hoặc tăng/giảm chiều cao của các thẻ sản phẩm tại 
+<Frame caption>
+  <img
+    src=""
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
+- **Nền**
+  - Chọn màu nền cho các thẻ bằng cách nhấn ô vuông sau đó chọn màu
+
+<Frame caption>
+  <img
+    src=""
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
+
+- Chuyển đổi qua lại giữa 2 trạng thái có màu nền và không có màu nền bằng cách nhấn nút <Icon icon="eye" color="#cfcfcf" size={15} />
+- Xóa màu nền bằng cách nhấn nút <Icon icon="minus" color="#cfcfcf" size={15} />
+- **Bo góc**
+  - Người dùng có thể nhập hoặc tăng/giảm chung độ bo góc của 4 góc của các thẻ tại ô nhập
+
+<Frame caption>
+  <img
+    src=""
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
+
+hoặc điềù chỉnh riêng lẻ độ bo góc của từng góc bằng cách nhấn nút
+
+<Frame caption>
+  <img
+    src=""
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
+
+- **Viền**
+  - Người dùng có thể nhập hoặc tăng/giảm chung độ lớn viền của các thẻ tại ô nhập
+
+<Frame caption>
+  <img
+    src=""
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
+
+- Chọn màu cho viền bằng cách nhấn ô vuông sau đó chọn màu
+
+<Frame caption>
+  <img
+    src=""
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
+
+- Chuyển đổi qua lại giữa 2 trạng thái có viền và không viền bằng cách nhấn nút <Icon icon="eye" color="#cfcfcf" size={15} />
+- Xóa viền bằng cách nhấn nút <Icon icon="minus" color="#cfcfcf" size={15} />
+- **Đổ bóng**
+  - Người dùng có thể chọn độ lớn đổ bóng của các thẻ tại ô
+
+<Frame caption>
+  <img
+    src=""
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
+
+- Chọn màu cho đổ bóng bằng cách nhấn ô vuông sau đó chọn màu
+
+<Frame caption>
+  <img
+    src=""
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
+
+- Chuyển đổi qua lại giữa 2 trạng thái có đổ bóng và không đổ bóng bằng cách nhấn nút <Icon icon="eye" color="#cfcfcf" size={15} />
+- Xóa đồ bóng bằng cách nhấn nút <Icon icon="minus" color="#cfcfcf" size={15} />
   - **Hiển thị tên sản phẩm**:
     - Người dùng nhấn nút <Icon icon="toggle-large-on" color="#0a06e4" size={15} /> để chuyển đổi qua lại giữa 2 trạng thái có tên sản phẩm và không có tên sản phẩm
   - **Hiển thị danh mục:**
     - Người dùng nhấn nút <Icon icon="toggle-large-on" color="#0a06e4" size={15} /> để chuyển đổi qua lại giữa 2 trạng thái có danh mục và không có danh mục
   - **Hiển thị giá tiền:**
-    - Người dùng chọn không hiển thị giá, giá cơ bản, giá khuyến mãi hoặc tất cả tại ![][image110]
+    - Người dùng chọn không hiển thị giá, giá cơ bản, giá khuyến mãi hoặc tất cả tại
+
+<Frame caption>
+  <img
+    src=""
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
   - **Hiển thị giá giảm:**
-    - Người dùng chọn hiển thị giá giảm theo phần trăm hay giá gốc ![][image111]
+    - Người dùng chọn hiển thị giá giảm theo phần trăm hay giá gốc 
+<Frame caption>
+  <img
+    src=""
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
   - **Sản phẩm Sale:**
     - Người dùng nhấn nút <Icon icon="toggle-large-on" color="#0a06e4" size={15} /> để chuyển đổi qua lại giữa 2 trạng thái có sản phẩm sale và không có sản phẩm sale
   - **Hiển thị nhãn:**
-    - Người dùng chọn không hiển thị nhãn ![][image113] hoặc chọn hiển thị nhãn flashsale, bán chạy, mới nhất.
+    - Người dùng chọn không hiển thị nhãn hoặc chọn hiển thị nhãn flashsale, bán chạy, mới nhất.
+<Frame caption>
+  <img
+    src=""
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
   - **Hiển thị yêu thích:**
     - Người dùng nhấn nút <Icon icon="toggle-large-on" color="#0a06e4" size={15} /> để chuyển đổi qua lại giữa 2 trạng thái có nút yêu thích và không có nút yêu thích
   - **Hiển thị đánh giá**
@@ -179,4 +513,12 @@ icon: "circle-user"
 
 **Kiểu nút giỏ hàng:**
 
-Người dùng có thể chọn chuyển đổi hiển thị giỏ hàng giữa icon hoặc button ![][image118]
+Người dùng có thể chọn chuyển đổi hiển thị giỏ hàng giữa icon hoặc button 
+<Frame caption>
+  <img
+    src=""
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
