--- a/app-builder/builder/components/support.mdx
+++ b/app-builder/builder/components/support.mdx
@@ -8,83 +8,123 @@ icon: "circle-user"
 
 - **Dữ liệu**
 - **Thêm dữ liệu mới:**
-- **Bước 1:** Người dùng nhấn vào nút "**Thêm dữ liệu mới**"
 
-<Frame caption="Nút thêm dữ liệu mới ">
-  <img
-    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image148_69d20274aa.png"
-    alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
-    title=""
-  />
-</Frame>
+<Steps>
+  <Step title="Thêm dữ liệu mới">
+    Người dùng nhấn vào nút **“Thêm dữ liệu mới”**.
 
-- **Bước 2:** Người dùng nhập tên,  nhấn "**Tải ảnh lên hoặc chọn ảnh từ thư viện**" và chọn đường dẫn đến trang (người dùng sẽ được điều hướng đến trang nào khi nhấn vào ảnh này)
+    <Frame caption="Nút thêm dữ liệu mới">
+      <img
+        src="https://aimini-upload.sgp1.digitaloceanspaces.com/image148_69d20274aa.png"
+        alt="Nút thêm dữ liệu mới trong giao diện quản lý"
+        style={{ borderRadius:"0.5rem" }}
+        title="Nút thêm dữ liệu mới"
+      />
+    </Frame>
+  </Step>
+  <Step title="Nhập thông tin và chọn ảnh">
+    Người dùng nhập **tên**, sau đó nhấn **“Tải ảnh lên hoặc chọn ảnh từ thư viện”** và chọn **đường dẫn đến trang đích** — đây là trang mà người dùng sẽ được điều hướng đến khi nhấn vào ảnh này.
 
-<Frame caption="Thêm dữ liệu  ">
-  <img
-    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image24_da75c9f2f9.png"
-    alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
-    title=""
-  />
-</Frame>
+    <Frame caption="Thêm dữ liệu">
+      <img
+        src="https://aimini-upload.sgp1.digitaloceanspaces.com/image24_da75c9f2f9.png"
+        alt="Giao diện thêm dữ liệu và chọn đường dẫn trang đích"
+        style={{ borderRadius:"0.5rem" }}
+        title="Thêm dữ liệu mới"
+      />
+    </Frame>
+  </Step>
+  <Step title="Hoàn tất hoặc hủy thao tác thêm dữ liệu">
+    Người dùng nhấn **“Thêm dữ liệu”** để tiến hành thêm ảnh, hoặc nhấn **“Hủy bỏ”** để hủy quá trình thêm dữ liệu.
+  </Step>
+</Steps>
 
-- **Bước 3:** Người dùng nhấn "Thêm dữ liệu" để tiến hành thêm ảnh hoặc nhấn "**Hủy bỏ**" để hủy quá trình thêm dữ liệu
 - **Chỉnh sửa:**
-  - **Bước 1:** Người dùng nhấn vào nút <Icon icon="pencil" color="#cfcfcf" size={15} /> để đến trang chỉnh sửa
 
-<Frame caption="Nút chỉnh sửa ">
-  <img
-    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image233_ad54a4651a.png"
-    alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
-    title=""
-  />
-</Frame>
+<Steps>
+  <Step title="Mở trang chỉnh sửa">
+    Người dùng nhấn vào nút <Icon icon="pencil" color="#cfcfcf" size={15} /> để **đến trang chỉnh sửa**.
 
-- **Bước 2**: Người dùng thay đổi tên, nhấn "**Tải ảnh lên hoặc chọn ảnh từ thư viện**” và sửa đường dẫn đến trang (người dùng sẽ được điều hướng đến trang nào khi nhấn vào ảnh này)
+    <Frame caption="Nút chỉnh sửa">
+      <img
+        src="https://aimini-upload.sgp1.digitaloceanspaces.com/image233_ad54a4651a.png"
+        alt="Nút chỉnh sửa dữ liệu trong giao diện quản lý"
+        style={{ borderRadius:"0.5rem" }}
+        title="Nút chỉnh sửa"
+      />
+    </Frame>
+  </Step>
+  <Step title="Chỉnh sửa thông tin và đường dẫn">
+    Người dùng thay đổi **tên**, nhấn **“Tải ảnh lên hoặc chọn ảnh từ thư viện”**, và **sửa đường dẫn đến trang đích** — đây là trang mà người dùng sẽ được điều hướng đến khi nhấn vào ảnh này.
 
-<Frame caption="Chỉnh sửa dữ liệu   ">
-  <img
-    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image213_c7c5f31cc0.png"
-    alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
-    title=""
-  />
-</Frame>
+    <Frame caption="Chỉnh sửa dữ liệu">
+      <img
+        src="https://aimini-upload.sgp1.digitaloceanspaces.com/image213_c7c5f31cc0.png"
+        alt="Giao diện chỉnh sửa thông tin và đường dẫn dữ liệu"
+        style={{ borderRadius:"0.5rem" }}
+        title="Chỉnh sửa dữ liệu"
+      />
+    </Frame>
+  </Step>
+  <Step title="Lưu hoặc hủy chỉnh sửa">
+    Người dùng nhấn **“Lưu chỉnh sửa”** để tiến hành cập nhật ảnh, hoặc nhấn **“Hủy bỏ”** để hủy quá trình chỉnh sửa dữ liệu.
+  </Step>
+</Steps>
 
-- **Bước 3:** Người dùng nhấn "**Lưu chỉnh sửa**" để tiến hành chỉnh sửa ảnh hoặc nhấn "**Hủy bỏ**" để hủy quá trình chỉnh sửa dữ liệu
 - **Xóa:**
-  - **Bước 1:** Người dùng nhấn vào nút <Icon icon="minus" color="#cfcfcf" size={15} /> để xóa dữ liệu
 
-<Frame caption="Nút xóa dữ liệu ">
-  <img
-    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image186_79b01da3b0.png"
-    alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
-    title=""
-  />
-</Frame>
+<Steps>
+  <Step title="Xóa dữ liệu">
+    Người dùng nhấn vào nút <Icon icon="minus" color="#cfcfcf" size={15} /> để **xóa dữ liệu**.
 
-- **Bước 2:** Tại hộp thông báo hiện lên, người dùng nhấn **Xóa ngay** để tiến hành xóa hoặc nhấn **Hủy** để hủy quá trình xóa dữ liệu
+    <Frame caption="Nút xóa dữ liệu">
+      <img
+        src="https://aimini-upload.sgp1.digitaloceanspaces.com/image186_79b01da3b0.png"
+        alt="Nút xóa dữ liệu trong giao diện quản lý"
+        style={{ borderRadius:"0.5rem" }}
+        title="Nút xóa dữ liệu"
+      />
+    </Frame>
+  </Step>
+  <Step title="Xác nhận thao tác xóa">
+    Khi hộp thông báo xuất hiện, người dùng nhấn **“Xóa ngay”** để **tiến hành xóa dữ liệu**, hoặc nhấn **“Hủy”** để **dừng quá trình xóa**.
 
-<Frame caption=" ">
-  <img
-    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image161_914288a857.png"
-    alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
-    title=""
-  />
-</Frame>
+    <Frame caption="Hộp xác nhận xóa dữ liệu">
+      <img
+        src="https://aimini-upload.sgp1.digitaloceanspaces.com/image161_914288a857.png"
+        alt="Hộp xác nhận thao tác xóa dữ liệu"
+        style={{ borderRadius:"0.5rem" }}
+        title="Xác nhận xóa dữ liệu"
+      />
+    </Frame>
+  </Step>
+</Steps>
 
 **Tổng quan:**
 
 - **Hiển thị hình ảnh:**
   - Người dùng nhấn nút <Icon icon="toggle-large-on" color="#0a06e4" size={15} /> để chuyển đổi qua lại giữa 2 trạng thái có hình ảnh hỗ trợ và không có hình ảnh hỗ trợ. Nếu bật, người dùng có thể điều chỉnh kích thước của hình ảnh.
 - **Kích thước:**
-  - Người dùng có thể chọn hoặc tăng/giảm chung kích thước của hình ảnh theo chiều rộng và chiều dài tại ![][image339]
+  - Người dùng có thể chọn hoặc tăng/giảm chung kích thước của hình ảnh theo chiều rộng và chiều dài tại
+
+    <Frame caption>
+      <img
+        src=""
+        alt=""
+        style={{ borderRadius:"0.5rem" }}
+        title=""
+      />
+    </Frame>
 - **Hiển thị nội dung:**
   - Người dùng nhấn nút <Icon icon="toggle-large-on" color="#0a06e4" size={15} /> để chuyển đổi qua lại giữa 2 trạng thái có nội dung hỗ trợ và không có nội dung hỗ trợ
-- **Kích thước /Màu sắc:**
-  - Người dùng có thể điều chỉnh kích thước và màu sắc cho nội dung hỗ trợ tại ![][image327]
+- **Kích thước/Màu sắc:**
+  - Người dùng có thể điều chỉnh kích thước và màu sắc cho nội dung hỗ trợ tại
+
+    <Frame caption>
+      <img
+        src=""
+        alt=""
+        style={{ borderRadius:"0.5rem" }}
+        title=""
+      />
+    </Frame>
